--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,7 @@
 .header {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    height: 80px;
+  }
   border-bottom: 1px solid var(--header-bottom-border);
 }
 
@@ -15,6 +18,12 @@
 
 .header-studio {
   color: var(--logo-studio);
+}
+
+.navigation {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .navigation__list {
@@ -57,11 +66,20 @@
 
 .contacts {
   margin-left: auto;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .contacts__list {
   display: flex;
-  column-gap: 30px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  @include desktop {
+    flex-direction: row;
+    gap: 30px;
+  }
 }
 
 .contacts__link {
@@ -73,8 +91,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -82,11 +98,39 @@
   &:focus {
     color: var(--main-hover-focus-color);
   }
+  @include desktop {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .contacts__icon {
   margin-right: 10px;
   fill: currentColor;
+}
+
+.menu-button {
+  display: inline-flex;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  z-index: 1;
+  margin-left: auto;
+  @include tablet {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-burger {
+  display: none;
 }
 
 // .header {
@@ -213,6 +257,7 @@
 //   border: none;
 //   background-color: transparent;
 //   z-index: 1;
+//   margin-right: auto;
 //   position: absolute;
 //   right: 0;
 //   @include tablet {
