--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,14 @@ body {
   cursor: pointer;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
+.address {
+  font-style: normal;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -106,57 +114,6 @@ body {
   }
 }
 
-.header {
-  border-bottom: 1px solid var(--header-bottom-border);
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .header {
-    height: 80px;
-  }
-}
-
-.header .container {
-  display: flex;
-  align-items: center;
-}
-
-.header-logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.header-studio {
-  color: var(--logo-studio);
-}
-
-@media screen and (max-width: 767px) {
-  .navigation {
-    display: none;
-  }
-}
-
-.navigation__list {
-  display: flex;
-  column-gap: 30px;
-}
-
-.navigation__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--main-title-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation__link:hover, .navigation__link:focus {
-  color: var(--main-hover-focus-color);
-}
-
 .current {
   color: var(--main-hover-focus-color);
   position: relative;
@@ -173,6 +130,54 @@ body {
   border-radius: 2px;
 }
 
+.header {
+  border-bottom: 1px solid var(--header-bottom-border);
+  position: relative;
+}
+.header .container {
+  display: flex;
+  align-items: center;
+  height: 60px;
+}
+@media screen and (min-width: 768px) {
+  .header .container {
+    height: 80px;
+  }
+}
+.header-logo {
+  margin-right: 93px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.header-studio {
+  color: var(--logo-studio);
+}
+
+@media screen and (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
+}
+.navigation__list {
+  display: flex;
+  column-gap: 30px;
+}
+.navigation__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navigation__link:hover, .navigation__link:focus {
+  color: var(--main-hover-focus-color);
+}
+
 .contacts {
   margin-left: auto;
 }
@@ -181,7 +186,6 @@ body {
     display: none;
   }
 }
-
 .contacts__list {
   display: flex;
   flex-direction: column;
@@ -194,7 +198,6 @@ body {
     gap: 30px;
   }
 }
-
 .contacts__link {
   font-weight: 500;
   font-size: 14px;
@@ -217,36 +220,9 @@ body {
     padding-bottom: 32px;
   }
 }
-
 .contacts__icon {
   margin-right: 10px;
   fill: currentColor;
-}
-
-.menu-button {
-  display: inline-flex;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  z-index: 1;
-  margin-left: auto;
-}
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
-}
-
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-burger {
-  display: none;
 }
 
 .logo {
@@ -263,6 +239,148 @@ body {
   }
 }
 
+.menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+.menu .menu-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 20px;
+}
+@media screen and (min-width: 382px) {
+  .menu .menu-container {
+    padding-left: 40px;
+  }
+}
+.menu.is-open {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .menu.is-open {
+    display: none;
+  }
+}
+.menu-button {
+  display: inline-flex;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  z-index: 1;
+  margin-left: auto;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-button:hover, .menu-button:focus {
+  color: var(--main-hover-focus-color);
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+.menu-button .menu-icon-cross {
+  display: none;
+}
+.menu-button.is-open .menu-icon-cross {
+  display: block;
+}
+.menu-button.is-open .menu-icon-burger {
+  display: none;
+}
+.menu-icon-cross {
+  fill: currentColor;
+}
+.menu-navigation__list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.menu-navigation__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-navigation__link:hover, .menu-navigation__link:focus {
+  color: var(--main-hover-focus-color);
+}
+.menu-current {
+  color: #2196f3;
+}
+.menu-wrap {
+  margin-top: auto;
+}
+.menu-contacts__list {
+  margin-bottom: 64px;
+}
+.menu-contacts__tel {
+  display: block;
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 382px) {
+  .menu-contacts__tel {
+    font-size: 34px;
+  }
+}
+.menu-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-contacts__mail:hover, .menu-contacts__mail:focus {
+  color: var(--main-hover-focus-color);
+}
+.menu-socials__list {
+  display: flex;
+}
+.menu-socials__item {
+  padding-right: 10px;
+  padding-left: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.menu-socials__item:first-child {
+  padding-left: 0;
+}
+.menu-socials__item:last-child {
+  border-right: none;
+  padding-right: 0px;
+}
+.menu-socials__link {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+@media screen and (min-width: 415px) {
+  .menu-socials__link {
+    font-size: 18px;
+  }
+}
+
 .hero {
   background: var(--hero-bg);
   padding-top: 118px;
@@ -274,7 +392,6 @@ body {
     padding-bottom: 200px;
   }
 }
-
 .hero__overlay {
   max-width: 480px;
   background-repeat: no-repeat;
@@ -377,12 +494,16 @@ body {
   transition: opacity 250ms linear, visibility 250ms;
   overflow-y: scroll;
   padding: 94px 15px;
+  z-index: 2;
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal {
@@ -412,11 +533,6 @@ body {
     height: 581px;
   }
 }
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0);
-}
-
 .modal__close-btn {
   position: absolute;
   right: 8px;
@@ -434,7 +550,6 @@ body {
 .modal__close-btn:hover, .modal__close-btn:focus {
   fill: var(--main-hover-focus-color);
 }
-
 .modal__title {
   font-weight: 700;
   font-size: 16px;
@@ -454,13 +569,32 @@ body {
     font-size: 20px;
   }
 }
+.modal-btn {
+  display: block;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--main-text-bg-color);
+  background-color: var(--main-hover-focus-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: transparent;
+  margin: 0 auto;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover, .modal-btn:focus {
+  background-color: var(--second-hover-focus-color);
+}
 
 .input-wrap {
   position: relative;
   width: 100%;
   margin-bottom: 10px;
 }
-
 .input-wrap__label {
   display: block;
   font-size: 12px;
@@ -469,7 +603,6 @@ body {
   color: var(--second-title-color);
   margin-bottom: 4px;
 }
-
 .input-wrap__field {
   width: 100%;
   height: 40px;
@@ -484,7 +617,6 @@ body {
 .input-wrap__field:focus {
   border: 1px solid var(--main-hover-focus-color);
 }
-
 .input-wrap__icon {
   position: absolute;
   top: 50%;
@@ -493,7 +625,6 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .input-wrap__field:focus + .input-wrap__icon {
   fill: var(--main-hover-focus-color);
 }
@@ -501,7 +632,6 @@ body {
 .comment-wrap {
   margin-bottom: 20px;
 }
-
 .comment-wrap__label {
   width: 100%;
   height: 120px;
@@ -550,7 +680,6 @@ body {
     line-height: 1.71;
   }
 }
-
 .agreement span {
   display: inline-block;
   content: "";
@@ -565,12 +694,14 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .agreement__check-icon {
   fill: transparent;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.agreement__conditions {
+  color: var(--main-hover-focus-color);
 }
 
 .input-check:checked + .agreement span {
@@ -580,31 +711,6 @@ body {
 
 .input-check:checked + .agreement .agreement__check-icon {
   fill: var(--main-text-bg-color);
-}
-
-.agreement__conditions {
-  color: var(--main-hover-focus-color);
-}
-
-.modal-btn {
-  display: block;
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--main-text-bg-color);
-  background-color: var(--main-hover-focus-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: transparent;
-  margin: 0 auto;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-btn:hover, .modal-btn:focus {
-  background-color: var(--second-hover-focus-color);
 }
 
 .features {
@@ -916,7 +1022,6 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
 .footer .container {
   display: flex;
   flex-direction: column;
@@ -928,7 +1033,32 @@ body {
     align-items: baseline;
   }
 }
+.footer-logo {
+  display: block;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 1199px) {
+  .footer-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.footer-studio {
+  color: var(--main-text-bg-color);
+}
 
+.company-info {
+  width: 232px;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .company-info {
+    width: 231px;
+    margin-right: 70px;
+    margin-bottom: 0;
+  }
+}
 @media screen and (min-width: 768px) {
   .company-info__join-us {
     display: flex;
@@ -947,43 +1077,9 @@ body {
     padding-right: 0;
   }
 }
-
-.company-info {
-  width: 232px;
-  margin-bottom: 60px;
-}
-@media screen and (min-width: 1200px) {
-  .company-info {
-    width: 231px;
-    margin-right: 70px;
-    margin-bottom: 0;
-  }
-}
-
-.address {
-  font-style: normal;
-}
-
-.footer-logo {
-  display: block;
-  margin-bottom: 20px;
-}
-@media screen and (max-width: 1199px) {
-  .footer-logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.footer-studio {
-  color: var(--main-text-bg-color);
-}
-
 .company-info__item {
   margin-bottom: 9px;
 }
-
 .company-info__text {
   display: block;
   font-size: 14px;
@@ -999,7 +1095,6 @@ body {
     justify-content: center;
   }
 }
-
 .company-info__link {
   display: block;
   font-size: 14px;
@@ -1036,7 +1131,6 @@ body {
     margin-right: 93px;
   }
 }
-
 .join-us__text {
   display: block;
   font-weight: 700;
@@ -1054,13 +1148,11 @@ body {
     justify-content: center;
   }
 }
-
 .join-us__list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
-
 .join-us__link {
   width: 44px;
   height: 44px;
@@ -1092,7 +1184,6 @@ body {
     width: 570px;
   }
 }
-
 .subscribe__text {
   display: block;
   width: 207px;
@@ -1110,8 +1201,7 @@ body {
     margin-left: auto;
   }
 }
-
-.subscribe-input-info {
+.subscribe__input-info {
   display: flex;
   align-items: center;
   width: 100%;
@@ -1126,11 +1216,10 @@ body {
   padding-left: 16px;
 }
 @media screen and (min-width: 1200px) {
-  .subscribe-input-info {
+  .subscribe__input-info {
     width: 358px;
   }
 }
-
 .subscribe__input {
   width: 100%;
 }
@@ -1139,15 +1228,13 @@ body {
     width: 358px;
   }
 }
-
-.subscribe-input-info::placeholder {
+.subscribe__input-info::placeholder {
   display: flex;
   align-items: center;
   letter-spacing: 0.03em;
   line-height: 1.25;
   color: var(--subscribe-input-info-text);
 }
-
 .subscribe__btn {
   display: flex;
   align-items: center;
@@ -1180,7 +1267,6 @@ body {
     right: 0;
   }
 }
-
 .subscribe__icon {
   margin-left: 10px;
 }
@@ -1227,7 +1313,6 @@ body {
   background: var(--main-hover-focus-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
 .filter__btn-current {
   background: var(--main-hover-focus-color);
   color: var(--main-text-bg-color);
@@ -1276,12 +1361,6 @@ body {
 .portfolio__wrap {
   position: relative;
   overflow: hidden;
-}
-
-.portfolio__img {
-  display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .portfolio__bg {
