--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -37,9 +37,8 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
-}
-
-.filter__btn-current {
-  background: var(--main-hover-focus-color);
-  color: var(--main-text-bg-color);
+  &-current {
+    background: var(--main-hover-focus-color);
+    color: var(--main-text-bg-color);
+  }
 }
