--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,30 +2,26 @@
   background-color: var(--footer-bg);
   padding-top: 60px;
   padding-bottom: 60px;
-}
-
-.footer .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  @include desktop {
-    flex-direction: row;
-    align-items: baseline;
-  }
-}
-
-.company-info__join-us {
-  @include tablet {
+  & .container {
     display: flex;
-    align-items: baseline;
-    padding-right: 30px;
+    flex-direction: column;
+    align-items: center;
+    @include desktop {
+      flex-direction: row;
+      align-items: baseline;
+    }
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    gap: 165px;
-    flex-direction: row;
+  &-logo {
+    display: block;
+    margin-bottom: 20px;
+    @media screen and (max-width: 1199px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
-  @include desktop {
-    padding-right: 0;
+  &-studio {
+    color: var(--main-text-bg-color);
   }
 }
 
@@ -37,61 +33,54 @@
     margin-right: 70px;
     margin-bottom: 0;
   }
-}
-
-.address {
-  font-style: normal;
-}
-
-.footer-logo {
-  display: block;
-  margin-bottom: 20px;
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &__join-us {
+    @include tablet {
+      display: flex;
+      align-items: baseline;
+      padding-right: 30px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      gap: 165px;
+      flex-direction: row;
+    }
+    @include desktop {
+      padding-right: 0;
+    }
   }
-}
-
-.footer-studio {
-  color: var(--main-text-bg-color);
-}
-
-.company-info__item {
-  margin-bottom: 9px;
-}
-
-.company-info__text {
-  display: block;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--main-text-bg-color);
-  margin-bottom: 9px;
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &__item {
+    margin-bottom: 9px;
   }
-}
-
-.company-info__link {
-  display: block;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--footer-mail-tel);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--main-hover-focus-color);
+  &__text {
+    display: block;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--main-text-bg-color);
+    margin-bottom: 9px;
+    @media screen and (max-width: 1199px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &__link {
+    display: block;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--footer-mail-tel);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--main-hover-focus-color);
+    }
+    @media screen and (max-width: 1199px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 
@@ -105,45 +94,42 @@
     margin-bottom: 0;
     margin-right: 93px;
   }
-}
-
-.join-us__text {
-  display: block;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--main-text-bg-color);
-  margin-bottom: 20px;
-  @media screen and (max-width: 1199px) {
+  &__text {
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-text-bg-color);
+    margin-bottom: 20px;
+    @media screen and (max-width: 1199px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__list {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  &__link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: var(--footer-social-link-background);
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-}
-
-.join-us__list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.join-us__link {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: var(--footer-social-link-background);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: var(--main-text-bg-color);
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: var(--main-hover-focus-color);
+    fill: var(--main-text-bg-color);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--main-hover-focus-color);
+    }
   }
 }
 
@@ -156,89 +142,83 @@
     position: relative;
     width: 570px;
   }
-}
-
-.subscribe__text {
-  display: block;
-  width: 207px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--main-text-bg-color);
-  margin-bottom: 20px;
-  @media screen and (max-width: 1199px) {
+  &__text {
+    display: block;
+    width: 207px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-text-bg-color);
+    margin-bottom: 20px;
+    @media screen and (max-width: 1199px) {
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
+  &__input-info {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--subscribe-input-info-text);
+    background-color: transparent;
+    border: 1px solid var(--subscribe-input-info-border);
+    border-radius: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    padding-left: 16px;
+    @include desktop {
+      width: 358px;
+    }
+  }
+  &__input {
+    width: 100%;
+    @include desktop {
+      width: 358px;
+    }
+  }
+  &__input-info::placeholder {
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    line-height: 1.25;
+    color: var(--subscribe-input-info-text);
+  }
+  &__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 50px;
+    font-weight: 700;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--main-text-bg-color);
+    background-color: var(--main-hover-focus-color);
+    border: transparent;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--second-hover-focus-color);
+    }
+    @include desktop {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
   }
-}
-
-.subscribe-input-info {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 50px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: var(--subscribe-input-info-text);
-  background-color: transparent;
-  border: 1px solid var(--subscribe-input-info-border);
-  border-radius: 4px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  padding-left: 16px;
-  @include desktop {
-    width: 358px;
+  &__icon {
+    margin-left: 10px;
   }
-}
-
-.subscribe__input {
-  width: 100%;
-  @include desktop {
-    width: 358px;
-  }
-}
-
-.subscribe-input-info::placeholder {
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  line-height: 1.25;
-  color: var(--subscribe-input-info-text);
-}
-
-.subscribe__btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  line-height: 1.88;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-text-bg-color);
-  background-color: var(--main-hover-focus-color);
-  border: transparent;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-top: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: var(--second-hover-focus-color);
-  }
-  @include desktop {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
-}
-
-.subscribe__icon {
-  margin-left: 10px;
 }
