--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,278 +1,88 @@
 .header {
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    height: 80px;
-  }
   border-bottom: 1px solid var(--header-bottom-border);
-}
-
-.header .container {
-  display: flex;
-  align-items: center;
-}
-
-.header-logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.header-studio {
-  color: var(--logo-studio);
+  position: relative;
+  & .container {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    @include tablet {
+      height: 80px;
+    }
+  }
+  &-logo {
+    margin-right: 93px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+  &-studio {
+    color: var(--logo-studio);
+  }
 }
 
 .navigation {
   @media screen and (max-width: 767px) {
     display: none;
   }
-}
-
-.navigation__list {
-  display: flex;
-  column-gap: 30px;
-}
-
-.navigation__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--main-title-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--main-hover-focus-color);
+  &__list {
+    display: flex;
+    column-gap: 30px;
   }
-}
-
-.current {
-  color: var(--main-hover-focus-color);
-  position: relative;
-  &::after {
-    content: "";
-    position: absolute;
-    display: block;
-    left: 0;
-    bottom: 0;
-    background-color: var(--main-hover-focus-color);
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
+  &__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--main-title-color);
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--main-hover-focus-color);
+    }
   }
 }
 
 .contacts {
-  margin-left: auto;
   @media screen and (max-width: 767px) {
     display: none;
   }
-}
-
-.contacts__list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-  @include desktop {
-    flex-direction: row;
-    gap: 30px;
-  }
-}
-
-.contacts__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--second-title-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--main-hover-focus-color);
-  }
-  @include desktop {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
-}
-
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.menu-button {
-  display: inline-flex;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  z-index: 1;
   margin-left: auto;
-  @include tablet {
-    display: none;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    @include desktop {
+      flex-direction: row;
+      gap: 30px;
+    }
+  }
+  &__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--second-title-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--main-hover-focus-color);
+    }
+    @include desktop {
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
+  }
+  &__icon {
+    margin-right: 10px;
+    fill: currentColor;
   }
 }
-
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-burger {
-  display: none;
-}
-
-// .header {
-//   width: 100%;
-//   height: 80px;
-//   border-bottom: 1px solid var(--header-bottom-border);
-//   @media screen and (max-width: 767px) {
-//     // position: relative;
-//   }
-// }
-
-// .header .container {
-//   display: flex;
-//   align-items: center;
-//   position: relative;
-// }
-
-// .current {
-//   color: var(--main-hover-focus-color);
-//   position: relative;
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     display: block;
-//     left: 0;
-//     bottom: 0;
-//     background-color: var(--main-hover-focus-color);
-//     width: 100%;
-//     height: 4px;
-//     border-radius: 2px;
-//   }
-// }
-
-// .header-logo {
-//   margin-right: 93px;
-//   padding-top: 25px;
-//   padding-bottom: 25px;
-// }
-
-// .header-studio {
-//   color: var(--logo-studio);
-// }
-
-// .navigation {
-//   @media screen and (max-width: 767px) {
-//     display: none;
-//   }
-// }
-
-// .navigation__list {
-//   display: flex;
-//   column-gap: 30px;
-// }
-
-// .navigation__link {
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--main-title-color);
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   transition-property: color;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//   &:hover,
-//   &:focus {
-//     color: var(--main-hover-focus-color);
-//   }
-//   @include desktop {
-//     padding-bottom: 31px;
-//   }
-// }
-
-// .contacts {
-//   @media screen and (max-width: 767px) {
-//     display: none;
-//   }
-//   margin-left: auto;
-// }
-
-// .contacts__list {
-//   display: flex;
-//   flex-direction: column;
-//   gap: 10px;
-//   @include desktop {
-//     flex-direction: row;
-//     gap: 30px;
-//   }
-// }
-
-// .contacts__link {
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--second-title-color);
-
-//   display: flex;
-//   align-items: center;
-//   // justify-content: center;
-
-//   transition-property: color;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//   &:hover,
-//   &:focus {
-//     color: var(--main-hover-focus-color);
-//   }
-//   @include desktop {
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//   }
-// }
-
-// .contacts__icon {
-//   margin-right: 10px;
-//   fill: currentColor;
-// }
-
-// .menu-button {
-//   display: inline-flex;
-//   padding: 0;
-//   border: none;
-//   background-color: transparent;
-//   z-index: 1;
-//   margin-right: auto;
-//   position: absolute;
-//   right: 0;
-//   @include tablet {
-//     display: none;
-//   }
-// }
-
-// .menu-button .icon-cross {
-//   display: none;
-// }
-
-// .menu-button.is-open .icon-cross {
-//   display: block;
-// }
-
-// .menu-button.is-open .icon-burger {
-//   display: none;
-// }
