--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,12 +8,16 @@
   transition: opacity 250ms linear, visibility 250ms;
   overflow-y: scroll;
   padding: 94px 15px;
+  z-index: 2;
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal {
@@ -39,44 +43,59 @@
     width: 528px;
     height: 581px;
   }
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0);
-}
-
-.modal__close-btn {
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: transparent;
-  fill: var(--modal-close-btn);
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    fill: var(--main-hover-focus-color);
+  &__close-btn {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+    fill: var(--modal-close-btn);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      fill: var(--main-hover-focus-color);
+    }
   }
-}
-
-.modal__title {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-title-color);
-  margin-bottom: 12px;
-  @media screen and (min-width: 349px) {
-    font-size: 18px;
+  &__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-title-color);
+    margin-bottom: 12px;
+    @media screen and (min-width: 349px) {
+      font-size: 18px;
+    }
+    @include mobile {
+      font-size: 20px;
+    }
   }
-  @include mobile {
-    font-size: 20px;
+  &-btn {
+    display: block;
+    width: 200px;
+    height: 50px;
+    font-weight: 700;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--main-text-bg-color);
+    background-color: var(--main-hover-focus-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: transparent;
+    margin: 0 auto;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--second-hover-focus-color);
+    }
   }
 }
 
@@ -84,72 +103,67 @@
   position: relative;
   width: 100%;
   margin-bottom: 10px;
-}
-
-.input-wrap__label {
-  display: block;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--second-title-color);
-  margin-bottom: 4px;
-}
-
-.input-wrap__field {
-  width: 100%;
-  height: 40px;
-  border: 1px solid var(--modal-form-input-border);
-  border-radius: 4px;
-  padding-left: 42px;
-  transition-property: border;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  outline: transparent;
-  &:focus {
-    border: 1px solid var(--main-hover-focus-color);
+  &__label {
+    display: block;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--second-title-color);
+    margin-bottom: 4px;
   }
-}
-
-.input-wrap__icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input-wrap__field:focus + .input-wrap__icon {
-  fill: var(--main-hover-focus-color);
+  &__field {
+    width: 100%;
+    height: 40px;
+    border: 1px solid var(--modal-form-input-border);
+    border-radius: 4px;
+    padding-left: 42px;
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    outline: transparent;
+    &:focus {
+      border: 1px solid var(--main-hover-focus-color);
+    }
+  }
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__field:focus + .input-wrap__icon {
+    fill: var(--main-hover-focus-color);
+  }
 }
 
 .comment-wrap {
   margin-bottom: 20px;
-}
-
-.comment-wrap__label {
-  width: 100%;
-  height: 120px;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: var(--modal-form-input-comment);
-  border: 1px solid var(--modal-form-input-border);
-  border-radius: 4px;
-  padding: 12px 16px;
-  outline: transparent;
-  resize: none;
-  transition-property: border;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus {
-    border: 1px solid var(--main-hover-focus-color);
-  }
-  &::placeholder {
+  &__label {
+    width: 100%;
+    height: 120px;
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
     color: var(--modal-form-input-comment);
+    border: 1px solid var(--modal-form-input-border);
+    border-radius: 4px;
+    padding: 12px 16px;
+    outline: transparent;
+    resize: none;
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus {
+      border: 1px solid var(--main-hover-focus-color);
+    }
+    &::placeholder {
+      font-size: 12px;
+      line-height: 14px;
+      letter-spacing: 0.01em;
+      color: var(--modal-form-input-comment);
+    }
   }
 }
 
@@ -170,28 +184,29 @@
     font-size: 14px;
     line-height: 1.71;
   }
-}
-
-.agreement span {
-  display: inline-block;
-  content: "";
-  align-items: center;
-  justify-content: center;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--main-title-color);
-  border-radius: 2px;
-  margin-right: 8.38px;
-  transition-property: background-color, border;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.agreement__check-icon {
-  fill: transparent;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  & span {
+    display: inline-block;
+    content: "";
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--main-title-color);
+    border-radius: 2px;
+    margin-right: 8.38px;
+    transition-property: background-color, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__check-icon {
+    fill: transparent;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__conditions {
+    color: var(--main-hover-focus-color);
+  }
 }
 
 .input-check:checked + .agreement span {
@@ -201,30 +216,4 @@
 
 .input-check:checked + .agreement .agreement__check-icon {
   fill: var(--main-text-bg-color);
-}
-
-.agreement__conditions {
-  color: var(--main-hover-focus-color);
-}
-
-.modal-btn {
-  display: block;
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--main-text-bg-color);
-  background-color: var(--main-hover-focus-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: transparent;
-  margin: 0 auto;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: var(--second-hover-focus-color);
-  }
 }
