--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -185,7 +185,10 @@
     line-height: 1.71;
   }
   & span {
-    display: inline-block;
+    @media screen and (max-width: 479px) {
+      display: inline-block;
+    }
+    display: flex;
     content: "";
     align-items: center;
     justify-content: center;
